--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -6,4 +6,5 @@
 @import "components/global.scss";
 @import "components/header.scss";
 @import "components/slider-top.scss";
+@import "components/projects.scss";
 @import "components/footer.scss";
