--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -497,15 +497,34 @@ body {
 
 .projects {
   padding: 120px 0;
-  position: relative;
+  font-family: "Gotham Pro";
+  font-weight: normal;
 }
 
 .projects__header {
   margin-bottom: 80px;
 }
 
+.projects__slider-item {
+  position: relative;
+  display: none;
+  -webkit-animation: vision 0.5s forwards;
+  animation: vision 0.5s forwards;
+}
+
+.projects__slider-item.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .projects__slider-main {
   position: relative;
+}
+
+.projects__slider-img {
+  -o-object-fit: none;
+  object-fit: none;
 }
 
 .projects__slider-glass {
@@ -520,6 +539,108 @@ body {
 .projects__slider-glass > svg {
   margin: 27px;
   fill: #F9F9FA;
+}
+
+.projects__slider-description {
+  max-width: 550px;
+  color: #40474E;
+  padding: 0;
+  margin-left: 84px;
+  margin-top: 140px;
+}
+
+.projects__slider-header {
+  font-size: 44px;
+  line-height: 1.3;
+  margin-bottom: 40px;
+}
+
+.projects__slider-text {
+  max-width: 460px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+.projects__slider-text > p:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.projects__control {
+  position: absolute;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 0;
+  z-index: 10;
+}
+
+.projects__control-list {
+  background-color: transparent;
+  border: 1px solid #6B97BB;
+  padding: 0;
+  margin-right: 9%;
+}
+
+.projects__control-link {
+  text-transform: uppercase;
+  color: #6B97BB;
+  font-size: 14px;
+  line-height: 1.1571428571;
+  display: inline-block;
+  padding: 18px 45px;
+  cursor: pointer;
+}
+
+.projects__control-arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 124px;
+  width: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.projects__control-arr {
+  display: inline-block;
+  fill: #40474E;
+  background-color: transparent;
+  border: 1px solid #98A4AE;
+  width: 54px;
+  height: 54px;
+  cursor: pointer;
+}
+
+.projects__control-left:hover {
+  fill: #AA182C;
+}
+
+.projects__control-right:hover {
+  fill: #AA182C;
+}
+
+.projects__carousel {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  bottom: 7%;
+  left: 51.5%;
+}
+
+.projects__carousel-item {
+  margin-right: 40px;
+  cursor: pointer;
 }
 
 .footer {
