--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -534,6 +534,7 @@ body {
   background-color: rgba(249, 249, 250, 0.2);
   left: 189px;
   bottom: 212px;
+  cursor: none;
 }
 
 .projects__slider-glass > svg {
