--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -6,5 +6,6 @@
 @import "components/global.scss";
 @import "components/header.scss";
 @import "components/slider-top.scss";
+@import "components/project.scss";
 @import "components/projects.scss";
 @import "components/footer.scss";
