--- a/Ceramica/src/sass/components/underheader.scss
+++ b/Ceramica/src/sass/components/underheader.scss
@@ -23,8 +23,8 @@
   &__image {
     position: relative;
     >img{
-      object-fit: cover
-    };
+      object-fit: cover;
+    }
     &::after {
       content: '';
       position: absolute;
