--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -5,7 +5,7 @@
 @import "components/reset.scss";
 @import "components/global.scss";
 @import "components/header.scss";
-@import "components/slider-top.scss";
+@import "components/underheader.scss";
 @import "components/project.scss";
 @import "components/projects.scss";
 @import "components/footer.scss";
