coments were removed

--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -8,4 +8,5 @@
 @import "components/underheader.scss";
 @import "components/project.scss";
 @import "components/projects.scss";
+@import "components/blog.scss";
 @import "components/footer.scss";
