--- a/Ceramica/src/sass/style.scss
+++ b/Ceramica/src/sass/style.scss
@@ -9,4 +9,5 @@
 @import "components/project.scss";
 @import "components/projects.scss";
 @import "components/blog.scss";
+@import "components/instagram.scss";
 @import "components/footer.scss";
